--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -37,7 +37,7 @@ on:
            ["15",       "",           "conda-forge-macos-standard"],
            ["26",       "",           "homebrew-macos-opthomebrew-minimal"],
            ["26",       "",           "homebrew-macos-opthomebrew-standard"],
-           ["26",       "",           "conda-forge-macos-minimal"]]
+           ["26",       "",           "conda-forge-macos-minimal"],
            ["26",       "",           "conda-forge-macos-standard"]]
         type: string
       extra_sage_packages:
