--- a/pkgs/sagemath-standard/tox.ini
+++ b/pkgs/sagemath-standard/tox.ini
@@ -95,6 +95,7 @@ setenv =
     sagewheels:              PIP_FIND_LINKS=file://{env:SAGE_SPKG_WHEELS:{env:SAGE_VENV:{toxinidir}/../../../../venv}/var/lib/sage/wheels}
     nopypi:                  PIP_NO_INDEX=true
     constraints_pkgs:        PIP_CONSTRAINT={toxinidir}/constraints_pkgs.txt
+    constraints_pkgs:        PIP_BUILD_CONSTRAINT={toxinidir}/constraints_pkgs.txt
     # No build isolation for PEP 517 packages - use what is already in the environment
     # Note that this pip env "NO" variable uses inverted logic:
     # PIP_NO_BUILD_ISOLATION=False means don't use build isolation.
@@ -170,6 +171,7 @@ passenv =                    {[pkgenv]passenv}
 
 setenv =                     {[pkgenv]setenv}
                              PIP_CONSTRAINT={env:SAGE_ROOT}/constraints_pkgs.txt
+                             PIP_BUILD_CONSTRAINT={env:SAGE_ROOT}/constraints_pkgs.txt
 
 basepython =                 {env:SAGE_VENV}/bin/python3
 
