--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -167,6 +167,7 @@ jobs:
               export PIP_FIND_LINKS=file://$WHEELHOUSE
               case $python_version_no_dot in
                   310|311) python_version_abi3=$python_version_no_dot ;;
+                  *t)      python_version_abi3=NO ;;
                   *)       python_version_abi3=312 ;;
               esac
               (set +x; cd "$WHEELHOUSE" && for whl in *.whl *.tar.gz; do
@@ -185,7 +186,7 @@ jobs:
           fi
           # Use passagemath-conf wheelhouse for missing wheels of third-party projects
           case "${{ matrix.os }}--${{ matrix.python-version }}" in
-              *--3.14) export SAGE_CONF_TARGETS="cysignals fpylll pplpy primecountpy";;
+              *--3.14*) export SAGE_CONF_TARGETS="cysignals fpylll pplpy primecountpy";;
           esac
           if [ -n "$SAGE_CONF_TARGETS" ]; then
               case "${{ matrix.os }}" in
