--- a/tox.ini
+++ b/tox.ini
@@ -415,7 +415,7 @@ setenv =
     #
     # https://hub.docker.com/r/opensuse/leap
     # - OpenSUSE Leap 42 was superseded by the Leap 15 series.
-    # - As of 2025-05, latest = 15 = 15.6; 15.5 EOL was 2024-12
+    # - As of 2025-11, latest = 15 = 15.6; 15.5 EOL was 2024-12
     # https://hub.docker.com/r/opensuse/tumbleweed
     # - Rolling distribution
     #
@@ -431,6 +431,7 @@ setenv =
     opensuse-15.5:         BASE_TAG=15.5
     opensuse-15.6:         BASE_TAG=15.6
     opensuse-15:           BASE_TAG=15
+    opensuse-16.0:         BASE_TAG=16.0
     opensuse-tumbleweed: BASE_IMAGE=opensuse/tumbleweed
     opensuse-tumbleweed:                       IGNORE_MISSING_SYSTEM_PACKAGES=no
     #
@@ -921,7 +922,7 @@ setenv =
                      alpine \
                      gentoo-python3.13 \
                      archlinux-latest \
-                     opensuse-15.6-gcc_11-python3.11 \
+                     opensuse-{15.6-gcc_11-python3.11,16.0-python3.13} \
                      opensuse-tumbleweed{-python3.10,} \
                      voidlinux{-musl,} \
                      conda-forge-python3.11 \
