--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -101,6 +101,7 @@ jobs:
       tox_packages_factors: >-
           ["standard"]
       docker_targets: "with-targets-optional"
+      logs_artifact_suffix: "-optional"
       extra_sage_packages: gdbm libxml2 perl_cpan_polymake_prereq perl_mongodb graphviz
       # We remove packages starting with _, in particular package _develop
       targets_optional: '$(echo $(export PATH=build/bin:$PATH && sage-package list :optional: --has-file "spkg-install.in|spkg-install|requirements.txt" --no-file "huge|has_nonfree_dependencies" | grep -v sagemath_doc | grep -v ^_))'
@@ -118,6 +119,7 @@ jobs:
       tox_packages_factors: >-
           ["standard"]
       docker_targets: "with-targets-optional"
+      logs_artifact_suffix: "-experimental"
       extra_sage_packages: gdbm libxml2 perl_cpan_polymake_prereq perl_mongodb graphviz
       targets_optional: '$(echo $(export PATH=build/bin:$PATH && sage-package list :experimental: --has-file "spkg-install.in|spkg-install|requirements.txt" --no-file "huge|has_nonfree_dependencies" | grep -v sagemath_doc))'
       max_parallel: 8
