--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -185,9 +185,9 @@ jobs:
               pip download -v --only-binary :all: --no-deps -d $WHEELHOUSE pas$pkg
           fi
           # Use passagemath-conf wheelhouse for missing wheels of third-party projects
-          case "${{ matrix.os }}--${{ matrix.python-version }}" in
-              *--3.14*) export SAGE_CONF_TARGETS="cysignals gmpy2";;
-          esac
+          ## case "${{ matrix.os }}--${{ matrix.python-version }}" in
+          ##     *--3.14*) export SAGE_CONF_TARGETS="cysignals fpylll pplpy primecountpy";;
+          ## esac
           if [ -n "$SAGE_CONF_TARGETS" ]; then
               case "${{ matrix.os }}" in
                   ubuntu*) sudo apt-get update
