pkgs/sagemath-*/MANIFEST.in: Include repair_wheel.py
for a in pkgs/sage*; do if [ -r $a/repair_wheel.py ] && ! grep -q repair_wheel $a/MANIFEST.in ; then sed -i.bak $'/__pycache__/i \\\ninclude repair_wheel.py\\\n' $a/MANIFEST.in; fi; done

--- a/pkgs/sagemath-database-stein-watkins-mini/MANIFEST.in
+++ b/pkgs/sagemath-database-stein-watkins-mini/MANIFEST.in
@@ -9,6 +9,8 @@ global-exclude *.cpp
 
 global-include all__sagemath_database_stein_watkins_mini.py
 
+include repair_wheel.py
+
 global-exclude __pycache__
 global-exclude *.py[co]
 global-exclude *.bak
