--- a/pkgs/sagemath-graphs/MANIFEST.in
+++ b/pkgs/sagemath-graphs/MANIFEST.in
@@ -74,6 +74,8 @@ global-exclude *.cpp
 
 include sage/graphs/base/boost_interface.cpp
 
+include repair_wheel.py
+
 global-exclude __pycache__
 global-exclude *.py[co]
 global-exclude *.bak
