--- a/pkgs/sagemath-latte-4ti2/MANIFEST.in
+++ b/pkgs/sagemath-latte-4ti2/MANIFEST.in
@@ -14,6 +14,8 @@ global-exclude *.cpp
 global-exclude all__sagemath_*.py
 global-include all__sagemath_latte_4ti2.py
 
+include repair_wheel.py
+
 global-exclude __pycache__
 global-exclude *.py[co]
 global-exclude *.bak
