--- a/pkgs/sagemath-maxima/MANIFEST.in
+++ b/pkgs/sagemath-maxima/MANIFEST.in
@@ -18,6 +18,8 @@ global-include all__sagemath_maxima.py
 global-exclude *.c
 global-exclude *.cpp
 
+include repair_wheel.py
+
 global-exclude __pycache__
 global-exclude *.py[co]
 global-exclude *.bak
