--- a/pkgs/sagemath-meataxe/MANIFEST.in
+++ b/pkgs/sagemath-meataxe/MANIFEST.in
@@ -13,6 +13,8 @@ global-exclude *.cpp
 global-exclude all__sagemath_*.*
 global-include all__sagemath_meataxe.py
 
+include repair_wheel.py
+
 global-exclude __pycache__
 global-exclude *.py[co]
 global-exclude *.bak
