--- a/pkgs/sagemath-polyhedra/MANIFEST.in
+++ b/pkgs/sagemath-polyhedra/MANIFEST.in
@@ -37,6 +37,8 @@ global-include all__sagemath_polyhedra.py
 global-exclude *.c
 global-exclude *.cpp
 
+include repair_wheel.py
+
 global-exclude __pycache__
 global-exclude *.py[co]
 global-exclude *.bak
