--- a/pkgs/sagemath-rubiks/MANIFEST.in
+++ b/pkgs/sagemath-rubiks/MANIFEST.in
@@ -13,6 +13,8 @@ global-exclude *.cpp
 global-exclude all__sagemath_*.py
 global-include all__sagemath_rubiks.py
 
+include repair_wheel.py
+
 global-exclude __pycache__
 global-exclude *.py[co]
 global-exclude *.bak
