--- a/pkgs/sagemath-schemes/MANIFEST.in
+++ b/pkgs/sagemath-schemes/MANIFEST.in
@@ -46,6 +46,8 @@ global-exclude *.cpp
 include sage/modular/arithgroup/farey.cpp
 include sage/modular/arithgroup/sl2z.cpp
 
+include repair_wheel.py
+
 global-exclude __pycache__
 global-exclude *.py[co]
 global-exclude *.bak
