.github/workflows/ci-downstream-mingw.yml: Use msys2 shell

--- a/.github/workflows/ci-downstream-mingw.yml
+++ b/.github/workflows/ci-downstream-mingw.yml
@@ -84,7 +84,7 @@ jobs:
           tox -v -v -e $(for env in $tox_envs; do echo -n "$comma$env"; comma=,; done) --skip-pkg-install
         env:
           VIRTUALENV_SYSTEM_SITE_PACKAGES: 1
-        shell: bash
+        shell: msys2 {0}
 
       - uses: actions/upload-artifact@v4
         if:   always()
