.github/workflows/ci-downstream-mingw.yml: Test more distributions

--- a/.github/workflows/ci-downstream-mingw.yml
+++ b/.github/workflows/ci-downstream-mingw.yml
@@ -26,6 +26,13 @@ jobs:
         distribution: >-
           ${{ fromJson(inputs.distributions
                        || '["sagemath-categories",
+                            "sagemath-cddlib",
+                            "sagemath-cmr",
+                            "sagemath-combinat",
+                            "sagemath-glpk",
+                            "sagemath-graphs",
+                            "sagemath-modules",
+                            "sagemath-objects"
                            ]') }}
     steps:
       - name: Check out passagemath
