tox.ini, .devcontainer: Add ubuntu-resolute

--- a/tox.ini
+++ b/tox.ini
@@ -247,6 +247,8 @@ setenv =
     ubuntu-plucky:                             IGNORE_MISSING_SYSTEM_PACKAGES=yes
     ubuntu-questing:  BASE_TAG=questing
     ubuntu-questing:                           IGNORE_MISSING_SYSTEM_PACKAGES=yes
+    ubuntu-resolute:  BASE_TAG=resolute
+    ubuntu-resolute:                           IGNORE_MISSING_SYSTEM_PACKAGES=yes
     #
     # https://hub.docker.com/_/debian
     # debian-buster does not have libfreetype-dev (it only has libfreetype6-dev)
@@ -913,7 +915,7 @@ setenv =
     # Master list of platforms tested in CI Linux
     #
     DEFAULT_SYSTEM_FACTORS=\
-                     ubuntu-{bionic-toolchain-gcc_9,focal,jammy,noble,plucky,questing} \
+                     ubuntu-{bionic-toolchain-gcc_9,focal,jammy,noble,plucky,questing,resolute} \
                      debian-{bullseye,bookworm,trixie,forky,sid} \
                      linuxmint-{20.2,20.3,21,21.1,21.2,21.3,22} \
                      fedora-{30,31,32,33,34,35,36,37,38,39,40,41,42,43} \
