--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,6 +24,7 @@ on:
            "ubuntu-noble",
            "ubuntu-plucky",
            "ubuntu-questing",
+           "ubuntu-resolute",
            "debian-bullseye",
            "debian-bookworm",
            "debian-trixie",
