.github/workflows/ci-downstream-mingw.yml: Add -homfly, -nauty

--- a/.github/workflows/ci-downstream-mingw.yml
+++ b/.github/workflows/ci-downstream-mingw.yml
@@ -28,7 +28,9 @@ jobs:
                             "sagemath-combinat",
                             "sagemath-glpk",
                             "sagemath-graphs",
+                            "sagemath-homfly",
                             "sagemath-modules",
+                            "sagemath-nauty",
                             "sagemath-objects"
                            ]') }}
         env:
