.github/workflows/ci-downstream-mingw.yml: Fix uploading of logs (bis)

--- a/.github/workflows/ci-downstream-mingw.yml
+++ b/.github/workflows/ci-downstream-mingw.yml
@@ -70,9 +70,15 @@ jobs:
           VIRTUALENV_SYSTEM_SITE_PACKAGES: 1
         shell: msys2 {0}
 
+      - name: Prepare logs artifact
+        if:   always()
+        run: |
+          (cd pkgs/${{ matrix.distribution }}/.tox && tar cf - */log) > downstream-mingw-logs-${{ matrix.distribution }}-${{ matrix.env }}.tar
+        shell: msys2 {0}
+
       - name: Upload logs artifact
         uses: actions/upload-artifact@v4
         if:   always()
         with:
           name: downstream-mingw-logs-${{ matrix.distribution }}-${{ matrix.env }}
-          path: "pkgs/*/.tox/*/log"
+          path: downstream-mingw-logs-${{ matrix.distribution }}-${{ matrix.env }}.tar
