pkgs/sagemath-categories/tox.ini: Use sage-runtest --logfile

--- a/pkgs/sagemath-categories/tox.ini
+++ b/pkgs/sagemath-categories/tox.ini
@@ -70,7 +70,7 @@ commands =
     {envpython} -c 'import sys; "" in sys.path and sys.path.remove(""); from sage.categories.all import *; SimplicialComplexes(); FunctionFields()'
 
     !notest:        bash -c 'cd $(python -c "import sys; \"\" in sys.path and sys.path.remove(\"\"); from sage.env import SAGE_LIB; print(SAGE_LIB)") \
-    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_categories --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage --installed'
+    !notest:                 && sage-runtests -p --force-lib --initial --environment=sage.all__sagemath_categories --probe all --baseline-stats-path=$KNOWN_TEST_FAILURES --optional=sage --installed --logfile {envlogdir}/doctest.log'
 
 [testenv:.tox]
 # Allow access to PyPI for auto-provisioning a suitable tox version
