.github/workflows/ci-downstream-mingw.yml: Test passagemath-rankwidth

--- a/.github/workflows/ci-downstream-mingw.yml
+++ b/.github/workflows/ci-downstream-mingw.yml
@@ -31,7 +31,8 @@ jobs:
                             "sagemath-homfly",
                             "sagemath-modules",
                             "sagemath-nauty",
-                            "sagemath-objects"
+                            "sagemath-objects",
+                            "sagemath-rankwidth"
                            ]') }}
         env:
           - ucrt-x86_64
